style: All pages UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -61,3 +61,21 @@ a {
 		opacity: 1;
 	}
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+	width: 6px;
+	height: 6px;
+	border-radius: 1px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+	@apply bg-secondary;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+	background: linear-gradient(129deg, #007aff 0%, #007aff 100%);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+	background: linear-gradient(129deg, #007aff 0%, #007aff 100%);
+}
